--- a/package.json
+++ b/package.json
@@ -1,62 +1,75 @@
 {
-  "name": "expo-app",
-  "main": "expo-router/entry",
+  "name": "travel-expense-tracker",
+  "main": "App.tsx",
   "version": "1.0.0",
   "scripts": {
-    "start": "bunx rork start -p r0jb3hv0iaexd9i59e0re --tunnel",
-    "start-web": "bunx rork start -p r0jb3hv0iaexd9i59e0re --web --tunnel",
-    "start-web-dev": "DEBUG=expo* bunx rork start -p r0jb3hv0iaexd9i59e0re --web --tunnel",
-    "lint": "expo lint"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "build:android": "expo build:android",
+    "build:ios": "expo build:ios",
+    "lint": "expo lint",
+    "test": "jest"
   },
   "dependencies": {
     "@ai-sdk/react": "^2.0.76",
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^15.0.2",
     "@nkzw/create-context-hook": "^1.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.4.5",
+    "@react-navigation/bottom-tabs": "^7.4.9",
     "@react-navigation/native": "^7.1.6",
+    "@react-navigation/stack": "^7.4.10",
     "@stardazed/streams-text-encoding": "^1.0.2",
     "@tanstack/eslint-plugin-query": "^5.91.2",
     "@tanstack/react-query": "^5.90.5",
+    "@types/react": "~19.1.10",
     "@ungap/structured-clone": "^1.3.0",
-    "expo": "^53.0.4",
-    "expo-blur": "~14.1.4",
-    "expo-camera": "~16.1.11",
-    "expo-constants": "~17.1.4",
-    "expo-file-system": "~18.1.11",
-    "expo-font": "~13.3.0",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.6",
-    "expo-image-picker": "~16.1.4",
-    "expo-linear-gradient": "~14.1.4",
-    "expo-linking": "~7.1.4",
-    "expo-location": "~18.1.4",
-    "expo-router": "~5.0.3",
-    "expo-sharing": "~13.1.5",
-    "expo-splash-screen": "~0.30.7",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.4",
-    "expo-system-ui": "~5.0.6",
+    "eslint-config-expo": "~10.0.0",
+    "expo": "~54.0.0",
+    "expo-blur": "~15.0.7",
+    "expo-camera": "~17.0.8",
+    "expo-constants": "~18.0.9",
+    "expo-document-picker": "^14.0.7",
+    "expo-file-system": "~19.0.17",
+    "expo-font": "~14.0.9",
+    "expo-haptics": "~15.0.7",
+    "expo-image": "~3.0.9",
+    "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-location": "~19.0.7",
+    "expo-print": "^15.0.7",
+    "expo-sharing": "~14.0.7",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-symbols": "~1.0.7",
+    "expo-system-ui": "~6.0.7",
     "expo-web-browser": "^15.0.8",
-    "lucide-react-native": "^0.475.0",
+    "lucide-react-native": "^0.460.0",
     "nativewind": "^4.1.23",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.1",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-safe-area-context": "5.3.0",
-    "react-native-screens": "~4.10.0",
-    "react-native-svg": "15.11.2",
-    "react-native-web": "^0.20.0",
+    "papaparse": "^5.5.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-native": "^0.81.4",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.14.0",
+    "react-native-url-polyfill": "^3.0.0",
+    "react-native-web": "^0.21.2",
+    "tesseract.js": "^6.0.1",
+    "typescript": "~5.9.2",
     "zod": "^4.1.12",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@expo/ngrok": "^4.1.0",
-    "@types/react": "~19.0.10",
-    "eslint": "9.31.0",
-    "eslint-config-expo": "9.2.0",
-    "typescript": "~5.8.3"
+    "@types/papaparse": "^5.3.16",
+    "eslint": "9.31.0"
   },
   "private": true
 }
