--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nkzw/create-context-hook": "^1.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.4.5",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.9",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.10",
@@ -47,7 +48,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "^15.0.8",
-    "lucide-react-native": "^0.460.0",
+    "lucide-react-native": "^0.553.0",
     "nativewind": "^4.1.23",
     "papaparse": "^5.5.3",
     "react": "^19.1.0",
