--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "build:android": "expo build:android",
     "build:ios": "expo build:ios",
@@ -17,7 +17,8 @@
     "@expo/vector-icons": "^15.0.2",
     "@nkzw/create-context-hook": "^1.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/datetimepicker": "^8.4.5",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.9",
     "@react-navigation/native": "^7.1.6",
@@ -25,40 +26,48 @@
     "@stardazed/streams-text-encoding": "^1.0.2",
     "@tanstack/eslint-plugin-query": "^5.91.2",
     "@tanstack/react-query": "^5.90.5",
-    "@types/react": "~19.1.10",
     "@ungap/structured-clone": "^1.3.0",
     "eslint-config-expo": "~10.0.0",
-    "expo": "~54.0.0",
+    "expo": "54.0.23",
+    "expo-auth-session": "^7.0.8",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.9",
+    "expo-dev-client": "^6.0.17",
     "expo-document-picker": "^14.0.7",
     "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.9",
+    "expo-image-manipulator": "^14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-location": "~19.0.7",
+    "expo-notifications": "~0.32.12",
     "expo-print": "^15.0.7",
     "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "^15.0.8",
+    "expo-updates": "~29.0.12",
+    "expo-web-browser": "~15.0.9",
+    "firebase": "^12.5.0",
     "lucide-react-native": "^0.553.0",
     "nativewind": "^4.1.23",
     "papaparse": "^5.5.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-native": "^0.81.4",
+    "react": "~18.3.1",
+    "react-dom": "~18.3.1",
+    "react-native": "~0.76.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-paper": "^5.12.3",
+    "moti": "^0.28.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.14.0",
+    "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.2",
     "tesseract.js": "^6.0.1",
@@ -69,7 +78,9 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@expo/ngrok": "^4.1.0",
+    "@types/node": "^20.0.0",
     "@types/papaparse": "^5.3.16",
+    "@types/react": "~19.1.10",
     "eslint": "9.31.0"
   },
   "private": true
