--- a/package.json
+++ b/package.json
@@ -80,8 +80,13 @@
     "@expo/ngrok": "^4.1.0",
     "@types/node": "^20.0.0",
     "@types/papaparse": "^5.3.16",
-    "@types/react": "~19.1.10",
+    "@types/react": "~18.3.12",
     "eslint": "9.31.0"
+  },
+  "overrides": {
+    "@types/react": "~18.3.12",
+    "react": "~18.3.1",
+    "react-dom": "~18.3.1"
   },
   "private": true
 }
