--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -10,7 +10,8 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1536m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.base/sun.nio.fs=ALL-UNNAMED --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+# Note: android.buildCacheDir was removed in AGP 7.0 - using Gradle's default build cache instead
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -28,15 +29,17 @@ android.enablePngCrunchInReleaseBuilds=true
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
 # ./gradlew <task> -PreactNativeArchitectures=x86_64
-# Building for both x86_64 (emulators) and arm64-v8a (physical devices)
-# CMake 4.1.2 is configured in local.properties
-reactNativeArchitectures=x86_64,arm64-v8a
+# For EAS builds, use arm64-v8a and armeabi-v7a (default for production)
+# For local development, you can use x86_64 for emulator
+# EAS will override this automatically, but keeping arm64-v8a,armeabi-v7a for consistency
+reactNativeArchitectures=arm64-v8a,armeabi-v7a
 
 # Use this property to enable support to the new architecture.
 # This will allow you to use TurboModules and the Fabric render in
 # your application. You should enable this flag either if you want
 # to write custom TurboModules/Fabric components OR use libraries that
 # are providing them.
+# REQUIRED by react-native-reanimated and react-native-worklets
 newArchEnabled=true
 
 # Use this property to enable or disable the Hermes JS engine.
@@ -65,3 +68,22 @@ expo.useLegacyPackaging=false
 # Specifies whether the app is configured to use edge-to-edge via the app config or plugin
 # WARNING: This property has been deprecated and will be removed in Expo SDK 55. Use `edgeToEdgeEnabled` or `react.edgeToEdgeEnabled` to determine whether the project is using edge-to-edge.
 expo.edgeToEdgeEnabled=true
+
+# Configure build to use less memory for daemon
+org.gradle.daemon=true
+org.gradle.configureondemand=true
+
+# Kotlin configuration
+kotlin.code.style=official
+kotlin.compiler.execution.strategy=in-process
+
+# Force Kotlin version to 2.1.20 (read by expo-updates and other modules)
+# Using 2.1.20 as it's what's actually being used (per error logs)
+kotlinVersion=2.1.20
+# KSP version for Kotlin 2.1.20 (expo-updates will use this via getKspVersion())
+# Using 2.1.20-2.0.1 as recommended by expo-updates for Kotlin 2.1.20
+kspVersion=2.1.20-2.0.1
+
+# Allow CMake to access restricted Java methods (Java 17 compatibility)
+systemProp.org.gradle.internal.native.headers.unresolved.dependencies.ignore=true
+android.native.buildOutput=verbose
