--- a/package.json
+++ b/package.json
@@ -55,21 +55,22 @@
     "expo-web-browser": "~15.0.9",
     "firebase": "^12.5.0",
     "lucide-react-native": "^0.553.0",
+    "moti": "^0.28.0",
     "nativewind": "^4.1.23",
     "papaparse": "^5.5.3",
-    "react": "~18.3.1",
-    "react-dom": "~18.3.1",
-    "react-native": "~0.76.5",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~3.16.1",
     "react-native-paper": "^5.12.3",
-    "moti": "^0.28.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.2",
+    "react-native-worklets": "^0.6.1",
     "tesseract.js": "^6.0.1",
     "typescript": "~5.9.2",
     "zod": "^4.1.12",
@@ -80,13 +81,8 @@
     "@expo/ngrok": "^4.1.0",
     "@types/node": "^20.0.0",
     "@types/papaparse": "^5.3.16",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.1.10",
     "eslint": "9.31.0"
-  },
-  "overrides": {
-    "@types/react": "~18.3.12",
-    "react": "~18.3.1",
-    "react-dom": "~18.3.1"
   },
   "private": true
 }
